# kv32

./: .gitignore  .gitmodules  .svlint.toml  Doxyfile  LICENSE  Makefile  README.md  TODO  TODO.md  env.config  issue15.md  issue16.md  issue17.md  issue18.md  log  update.sh
rtos/zephyr/: CMakeLists.txt  Kconfig  Makefile  README.md  module.yml  patch_kconfig.sh
rtos/zephyr/boards/riscv/kcore_board/: CMakeLists.txt  Kconfig.board  Kconfig.defconfig  board.cmake  board.yml  kcore_board.dts  kcore_board_defconfig
rtos/zephyr/boards/riscv/kv32/: CMakeLists.txt  Kconfig.board  Kconfig.defconfig  board.cmake  board.yml  kv32.dts  kv32_defconfig
rtos/zephyr/drivers/: CMakeLists.txt  Kconfig
rtos/zephyr/drivers/console/: CMakeLists.txt  Kconfig.kcore  Kconfig.kv32  console_kcore.c  console_kv32.c
rtos/zephyr/drivers/serial/: CMakeLists.txt  Kconfig.kcore  Kconfig.kv32  uart_kcore.c  uart_kv32.c
rtos/zephyr/dts/bindings/: vendor-prefixes.txt
rtos/zephyr/dts/bindings/serial/: kcore,uart.yaml  kv32,uart.yaml
rtos/zephyr/samples/hello/: CMakeLists.txt  README.md  prj.conf
rtos/zephyr/samples/hello/src/: main.c
rtos/zephyr/samples/simple/: CMakeLists.txt  README.md  prj.conf
rtos/zephyr/samples/simple/src/: main.c
rtos/zephyr/samples/threads_sync/: CMakeLists.txt  prj.conf
rtos/zephyr/samples/threads_sync/src/: main.c
rtos/zephyr/samples/uart_echo/: CMakeLists.txt  README.md  prj.conf
rtos/zephyr/samples/uart_echo/src/: main.c
rtos/zephyr/soc/riscv/kcore/: CMakeLists.txt  Kconfig.defconfig  Kconfig.soc  linker-defs-sub.h  linker.ld  reset.S  soc.c  (+2 more)
(+538 files in other folders)
